<resources>
    <string name="app_name">CreateJS</string>
    <string name="activity_0">Cool工坊</string>
    <string name="activity_1">API文档</string>
    <string name="activity_2">崩溃</string>
    <string name="activity_3">代码阅读</string>
    <string name="activity_4">....</string>
    <string name="s_35">Build</string>
    <string name="accessibility_service_description">不强制开启，但不开启，无法正常运行和无障碍相关的脚本，以及js开发者无法正常调试脚本，推荐开启。</string>>
    <string name="na_1">后台脚本，已强制停止</string>
    <string name="na_2">：（  操作貌似，应该，可能是失败的</string>
    <string name="na_3">等待加载JS</string>
    <string name="na_0">库下载</string>
    <string name="na_4">错误</string>
    <string name="s_0">支持库 </string>
    <string name="s_1">强制横屏 </string>
    <string name="s_2">隐藏状态栏 </string>
    <string name="s_3">Log屏蔽 </string>
    <string name="s_4">列表 </string>
    <string name="s_5">虚拟包名 </string>
    <string name="s_6">指定栈大小 </string>
    <string name="s_7">引擎 </string>
    <string name="s_8">启用用户库 </string>
    <string name="s_9">跳转提示 </string>
    <string name="s_10">当前js脚本试图跳转到其他应用，你想希望跳转吗？ </string>
    <string name="s_11">确认 </string>
    <string name="s_12">取消 </string>
    <string name="s_13">调试或调用 </string>
    <string name="s_14">清除</string>
    <string name="s_15">解析失败</string>
    <string name="s_17">调试或调用</string>
    <string name="s_16">关闭</string>
    <string name="s_18">函数名</string>
    <string name="s_19">参数，多个参数用( , )逗号(英文符)隔开</string>
    <string name="s_20">库信息</string>
    <string name="s_21">库正在加载中</string>
    <string name="s_22">隐藏</string>
    <string name="s_23">库清单文件地址</string>
    <string name="s_24">库名</string>
    <string name="s_25">下载</string>
    <string name="s_26">下载中。。。</string>
    <string name="s_27">库下载中</string>
    <string name="s_32">解压中</string>
    <string name="s_28">解压完成</string>
    <string name="s_29">解压失败</string>
    <string name="s_30">下载失败</string>
    <string name="s_31">下载完成</string>
    <string name="s_33">退出</string>
    <string name="s_34">不依赖</string>
    <string name="s_36">自动滚动</string>
    <string name="s_37">无障碍服务</string>
    <string name="s_38">当前脚本需要启用无障碍服务，请跳转设置开启CreateJS无障碍。</string>
    <string name="s_39">跳转失败，请手动进入设置</string>
    <string name="s_40">官方库</string>
    <string name="s_41">库管理</string>
    <string name="s_42">例子</string>
    <string name="s_43">第三方库</string>
    <string name="s_44">压缩中</string>
    <string name="s_45">你需要把CreateJS的允许悬浮其他程序之上的权限开启</string>
    <string name="cannt_open_external_file_x">Can\'t open external file: %s</string>
    <string name="out_of_memory_error">Out of application memory</string>
    <string name="s_46">通过文件加载</string>
    <string name="s_47">通过粘贴板加载</string>
    <string name="s_48">通过文本加载</string>
    <string name="s_49">停止所有脚本</string>
    <string name="s_50">显示Console</string>
    <string name="s_51">目标不是文件</string>
    <string name="s_52">写入失败</string>
    <string name="s_53">隐藏Console</string>
    <string name="s_54">有一个新的消息</string>
    <string name="s_55">设置</string>
    <string name="s_56">若想正常调用函数或调试，请选择依赖Common库</string>
    <string name="s_57">共享</string>
    <string name="s_58">共享JavaScript</string>
    <string name="s_59">啥也没有查到~~</string>
    <string name="s_60">列表</string>
    <string name="s_61">上传</string>
    <string name="s_62">选择文件</string>
    <string name="s_63">选择文档</string>
    <string name="s_64">简介(MAX 50字)</string>
    <string name="s_65">标题(MAX 20字)</string>
    <string name="s_66">上一层</string>
    <string name="s_67">标题不可为空</string>

    <string name="s_68">已提交</string>
    <string name="s_69">提交中。。。</string>
    <string name="s_70">开始</string>
    <string name="s_71">开启宅门</string>
    <string name="s_78">少侠，留步，尚未保存</string>
    <string name="s_79">保存</string>
    <string name="s_80">撤回</string>
    <string name="s_81">重做</string>
    <string name="s_82">任务完成</string>
    <string name="s_83">新建</string>
    <string name="s_84">新建文件（夹）</string>
    <string name="s_85">新建项目</string>
    <string name="s_86">文件</string>
    <string name="s_87">文件夹</string>
    <string name="s_88">新建主题(ct)</string>
    <string name="s_89">编辑</string>
    <string name="s_90">应用主题</string>
    <string name="s_91">设为默认</string>
    <string name="s_93">在开启一个活动的同时你应该赋予他一个TAG</string>
    <string name="s_94">当前文件未保存，是否不保存，直接打开</string>
    <string name="s_95">直接打开</string>
    <string name="s_96">新建压缩包(zip)</string>
    <string name="s_92">新建JS(js)</string>
    <string name="s_97">警告</string>
    <string name="open">打开该工程</string>
    <string name="project_error">这个路径不能构建一个工程，请检查 "build.txt" 是否合法</string>
    <string name="project_waring">当前文件不在工程内，以文件加载</string>
    <string name="s_98">删除工程</string>
    <string name="s_99">删除文件（夹）</string>
    <string name="s_100">重命名</string>
    <string name="s_101">你真的希望我删掉它（们）吗</string>
    <string name="s_102">检查更新</string>
    <string name="s_103">没有可用的更新</string>
    <string name="s_104">正在检查稍后。。。</string>
    <string name="s_105">有可用更新</string>
    <string name="s_106">更新</string>
    <string name="s_107">安装</string>
    <string name="s_err">(\n\n你可返回再试一次，如果无效请尝试以下方法)\n对于安卓5.0以下，更多的异常是Handler.postDelayed太小造成的，请尝试返回，将堆栈大小调更大（十倍或百倍）</string>

    <string name="s_108">新建应用程序(V7)</string>
    <string name="s_109">App内核</string>
    <string name="s_110">构建中....</string>
    <string name="s_111">签名中....</string>
    <string name="s_112">App内核复制中....</string>
    <string name="s_113">资源文件提换中....</string>
    <string name="s_114">打包中....</string>
    <string name="s_115">安装...</string>
    <string name="s_116">应用名称</string>
    <string name="s_117">应用包名</string>
    <string name="e_0">这个世界上无耻的人很多，我把你列在第一位。因为你没有本领，却想着去破解。我告诉你最简单的破解方法，在app_is_cjs.isCjs()方法里返回true即可，我瞧不起你。</string>

    <string name="s_118">作为MC（我的世界mod）</string>
</resources>
