<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/new_data"
        android:orderInCategory="100"
        android:title="@string/s_84"/>

    <item android:title="@string/s_85"
        android:orderInCategory="100">
        <menu>
            <item
                android:id="@+id/new_theme"
                android:orderInCategory="100"
                android:title="@string/s_88"/>
            <item
                android:id="@+id/new_js"
                android:orderInCategory="100"
                android:title="@string/s_92"/>
            <item
                android:id="@+id/new_zip"
                android:orderInCategory="100"
                android:title="@string/s_96"/>
            <item
                android:id="@+id/new_app_v7"
                android:orderInCategory="100"
                android:title="@string/s_108"/>
        </menu>
    </item>
</menu>