<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/clear_item"
            android:icon="@mipmap/clear"
            android:title="@string/s_49" />
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="@string/s_57">
        <menu>
            <item
                android:id="@+id/sharing_algorithm"
                android:icon="@mipmap/share"
                android:title="@string/s_58" />
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:title="Send" />-->
        </menu>
    </item>

    <item android:title="@string/s_70">
        <menu>
            <item
                android:id="@+id/start_working"
                android:icon="@mipmap/start_work"
                android:title="@string/s_71" />
            <!--<item-->
            <!--android:id="@+id/nav_send"-->
            <!--android:title="Send" />-->
        </menu>
    </item>

</menu>