<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/run"
        android:orderInCategory="100"
        android:title="@string/s_70"
        android:icon="@mipmap/run2"
        app:showAsAction="always" />
    <item
        android:id="@+id/undo"
        android:orderInCategory="100"
        android:title="@string/s_80"
        android:icon="@mipmap/undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/redo"
        android:orderInCategory="100"
        android:title="@string/s_81"
        android:icon="@mipmap/redo"
        app:showAsAction="always" />
    <item
        android:id="@+id/save"
        android:orderInCategory="100"
        android:title="@string/s_79"
        android:icon="@mipmap/save"
        app:showAsAction="ifRoom" />
</menu>