<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lingsatuo.createjs.LoadingActivity"
    tools:showIn="@layout/activity_scrolling">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="18dp"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/s_0"
        android:layout_weight="1"
        android:paddingRight="18dp"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:id="@+id/libs"
        android:layout_height="wrap_content"></android.support.v7.widget.AppCompatSpinner>
   
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_height="wrap_content">
            <TextView
            android:layout_width="wrap_content"
            android:text="@string/s_7"
            android:layout_weight="1"
            android:paddingRight="18dp"
            android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="wrap_content"
                android:id="@+id/engine"
                android:layout_weight="1"
                android:entries="@array/engine"
                android:layout_height="wrap_content">

            </android.support.v7.widget.AppCompatSpinner>
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_height="wrap_content">
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:text="@string/s_1"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <Switch
        android:layout_width="wrap_content"
        android:id="@+id/orientation"
        android:layout_height="wrap_content" />
</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/s_2"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_width="wrap_content"
                android:id="@+id/hide_status_bar"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/s_8"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_width="wrap_content"
                android:id="@+id/user_libs"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/s_3"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_width="wrap_content"
                android:id="@+id/log_mask"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:id="@+id/log_mask_button"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/s_4"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/s_5"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="wrap_content"
                android:id="@+id/package_name"
                android:hint="com.lingsatuo.createjs"
                android:singleLine="true"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/s_6"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="wrap_content"
                android:id="@+id/memsize"
                android:singleLine="true"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
