<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="26dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:id="@+id/select"
            android:text="@string/s_62"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:id="@+id/path"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="26dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/title"
            android:hint="@string/s_65"
            android:singleLine="true"
            android:maxLength="20"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="26dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/messgae"
            android:hint="@string/s_64"
            android:gravity="left"
            android:maxLength="50"
            android:layout_height="80dp" />
    </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_gravity="right|bottom"
        android:src="@android:drawable/ic_menu_share"
        android:id="@+id/up"
        android:layout_height="wrap_content" />
</FrameLayout>